@@ -1,4 +1,6 @@
 == 0.6.2 Rambo release
+ * thin restart now sends HUP signals rather then stopping & starting.
+ * HUP signal now launches a new process with the same options.
  * Add PID and more info from the last request to the Stats adapter
    mostly taken from Rack::ShowException.
  * pid and log files in cluster are no longer required to be relative to the
